<resources>
    <string name="app_name">Note App By Mvvm</string>

    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="categories">Categories</string>
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="foods">Foods</string>

    <string name="search">Search...</string>
    <string name="checkInternet">Please Check Your Connection</string>
    <string name="emptyList">List is empty</string>
    <string name="ingredients">Ingredients</string>
    <string name="measure">Measure</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="noteApp">NOTE</string>


</resources>