<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <!--Close-->
    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:rotation="45"

        android:src="@drawable/ic_round_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--Title-->

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_yellow_light"
        android:fontFamily="@font/almarai_light"
        android:hint="@string/title"
        android:maxLines="1"
        android:textColorHint="@color/yellowDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgClose" />


    <!--Description-->

    <EditText
        android:id="@+id/edtDesc"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:background="@drawable/bg_rounded_yellow_light"
        android:hint="@string/desc"
        android:padding="10dp"
        android:textColorHint="@color/yellowDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTitle" />


    <!--Content-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_gray_light"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDesc">
        <!--CategorySpinner-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/categoryLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textColor="@color/grayDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cardViewSpinner"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSpinner"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:elevation="1dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>



        <!--PrioritySpinner-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="5dp"
            android:id="@+id/PriorityLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/priorityText"
                android:fontFamily="@font/almarai_light"
                android:text="@string/priority"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/priorityCardView"
                android:textColor="@color/grayDark"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/priorityCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp">


<Spinner
    android:layout_gravity="center_vertical"

    android:id="@+id/prioritySpinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>





            </androidx.cardview.widget.CardView>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


   <com.google.android.material.button.MaterialButton
       android:id="@+id/saveNote"
       app:layout_constraintTop_toBottomOf="@id/contentLayout"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:textStyle="bold"
       android:fontFamily="@font/almarai_light"
       android:paddingHorizontal="50dp"
       android:textColor="@color/white"
       android:textSize="18sp"
       android:backgroundTint="@color/green"
       app:cornerRadius="10dp"
       android:text="@string/save"
       android:layout_marginTop="30dp"
       android:layout_width="wrap_content"
       android:layout_height="55dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>